Add patreon link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@ License: GNU GPL v3
   </head>
   <body>
     <div class="fixed h-32 w-full bg-gray-100 p-2">
-      <div class="text-4xl font-black">
-        RTC Practice Tools
+      <div class="relative">
+        <div class="text-4xl font-black">
+          RTC Practice Tools
+        </div>
+        <div class="right-0 absolute top-0">
+          <a target="_blank" href="https://www.patreon.com/rickeyathome">Support me on Patreon!</a>
+        </div>      
       </div>
       <div>
         <span class="text-xl font-bold">
